--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,12 @@ vxi11_1.08 - 3/09/2009
 Added a sanity check for link->maxRecvSize to make sure it's >0. This gets 
 around a bug in some versions of the Agilent Infiniium scope software.
 
+Changed the erroneous strncpy() to memcpy() in vxi11_send, as we could be
+sending binary data (not just strings).
+
+Changed a lot of char *'s to const char *'s in an attempt to get rid of
+pedantic gcc compiler warnings.
+
 ------------------------------------------------------------------------------
 vxi11_1.07 - 9/10/2007
 
